--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,24 +9,25 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@react-pdf/renderer": "^4.3.2",
+        "axios": "^1.6.7",
+        "date-fns": "^3.3.1",
+        "framer-motion": "^11.0.5",
+        "next": "^14.2.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "next": "^14.2.0",
-        "axios": "^1.6.7",
         "recharts": "^2.12.0",
-        "framer-motion": "^11.0.5",
-        "socket.io-client": "^4.6.1",
-        "date-fns": "^3.3.1"
+        "socket.io-client": "^4.6.1"
     },
     "devDependencies": {
-        "typescript": "^5.3.3",
         "@types/node": "^20.11.16",
         "@types/react": "^18.2.56",
         "@types/react-dom": "^18.2.19",
-        "tailwindcss": "^3.4.1",
-        "postcss": "^8.4.35",
         "autoprefixer": "^10.4.17",
         "eslint": "^8.56.0",
-        "eslint-config-next": "^14.2.0"
+        "eslint-config-next": "^14.2.0",
+        "postcss": "^8.4.35",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.3.3"
     }
 }
