--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,35 @@
+# Dependencies
+node_modules/
+
+
+# Next.js
+.next/
+out/
+build/
+dist/
+
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
 venv/
+.venv/
+env/
 .env
-.pytest_cache/
 
-# Node
-node_modules/
-npm-debug.log
-yarn-error.log
-.next/
-dist/
-build/
-coverage/
+# Models
+backend/models_saved/
 
-# IDE
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDEs
 .vscode/
 .idea/
-*.swp
 .DS_Store
 
-# OS
-Thumbs.db
+# Misc
+.vercel
